<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_musique"
        android:title="@string/lecteur" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_queue"
        android:title="@string/queue" />
    <item
        android:id="@+id/navigation_artiste"
        android:icon="@drawable/ic_artist"
        android:title="@string/queue_artist"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_identification"
        android:icon="@drawable/ic_mic"
        android:title="@string/shazam" />
</menu>