<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_nouveaute">

    <fragment
        android:id="@+id/navigation_nouveaute"
        android:name="com.example.wolfii.NouveautesFragment"
        android:label="@string/queue"
        tools:layout="@layout/fragment_nouveautes" />

    <fragment
        android:id="@+id/navigation_artiste"
        android:name="com.example.wolfii.ListAllArtistsOrPlaylistsFragment"
        android:label="@string/queue_artist"
        tools:layout="@layout/fragment_listallsongs" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.wolfii.ControleMusiqueFragment"
        android:label="@string/lecteur"
        tools:layout="@layout/fragment_controle_musique" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.wolfii.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_identification"
        android:label="@string/shazam"
        android:name="com.example.wolfii.IdentificationFragment"
        tools:layout="@layout/fragment_identification" />
</navigation>